# MathExpressions

./: BinaryExpression.cpp  BinaryExpression.h  CMakeLists.txt  Expression.h  Minus.cpp  Minus.h  Num.cpp  Num.h  Plus.cpp  Plus.h  main.cpp
Math_Expressions_Parsing/: Factory.cpp  Factory.h  MathExpressionsParser.cpp  MathExpressionsParser.h
Reference_Counting/: ReferenceCount.h  SmartPtr.h
Utility/: UtilityFunctions.cpp  UtilityFunctions.h
